@@ -4,16 +4,18 @@ package com.ruoyi.system.controller.system;
 import cn.dev33.satoken.annotation.SaCheckPermission;
 import cn.hutool.core.net.URLDecoder;
 import cn.hutool.core.util.ObjectUtil;
-import com.ruoyi.common.log.annotation.Log;
-import com.ruoyi.common.core.web.controller.BaseController;
 import com.ruoyi.common.core.domain.R;
-import com.ruoyi.common.mybatis.core.page.TableDataInfo;
-import com.ruoyi.common.core.validate.QueryGroup;
-import com.ruoyi.common.log.enums.BusinessType;
 import com.ruoyi.common.core.exception.ServiceException;
+import com.ruoyi.common.core.validate.QueryGroup;
+import com.ruoyi.common.core.web.controller.BaseController;
+import com.ruoyi.common.log.annotation.Log;
+import com.ruoyi.common.log.enums.BusinessType;
+import com.ruoyi.common.mybatis.core.page.TableDataInfo;
 import com.ruoyi.system.domain.bo.SysOssBo;
 import com.ruoyi.system.domain.vo.SysOssVo;
 import com.ruoyi.system.service.ISysOssService;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.validation.constraints.NotEmpty;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.validation.annotation.Validated;
@@ -26,12 +28,8 @@ import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.validation.constraints.NotEmpty;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -66,7 +64,7 @@ public class SysOssController extends BaseController {
     @GetMapping("/listByIds/{ossIds}")
     public R<List<SysOssVo>> listByIds(@NotEmpty(message = "主键不能为空")
                                        @PathVariable Long[] ossIds) {
-        List<SysOssVo> list = iSysOssService.listVoByIds(Arrays.asList(ossIds));
+        List<SysOssVo> list = iSysOssService.listVoByIds(List.of(ossIds));
         return R.ok(list);
     }
 
@@ -79,7 +77,7 @@ public class SysOssController extends BaseController {
     @GetMapping("/listByUrls")
     public R<List<SysOssVo>> listByUrls(@NotEmpty(message = "url不能为空") String urls) {
         String[] urlArray = URLDecoder.decode(String.valueOf(urls), StandardCharsets.UTF_8).split(",");
-        List<SysOssVo> list = iSysOssService.listVoByUrls(Arrays.asList(urlArray));
+        List<SysOssVo> list = iSysOssService.listVoByUrls(List.of(urlArray));
         return R.ok(list);
     }
 
@@ -96,11 +94,11 @@ public class SysOssController extends BaseController {
             throw new ServiceException("上传文件不能为空");
         }
         SysOssVo oss = iSysOssService.upload(file);
-        Map<String, String> map = new HashMap<>(2);
-        map.put("url", oss.getUrl());
-        map.put("fileName", oss.getOriginalName());
-        map.put("ossId", oss.getOssId().toString());
-        return R.ok(map);
+        return R.ok(Map.of(
+            "url", oss.getUrl(),
+            "fileName", oss.getOriginalName(),
+            "ossId", oss.getOssId().toString()
+        ));
     }
 
     /**
@@ -124,7 +122,7 @@ public class SysOssController extends BaseController {
     @DeleteMapping("/{ossIds}")
     public R<Void> remove(@NotEmpty(message = "主键不能为空")
                           @PathVariable Long[] ossIds) {
-        return toAjax(iSysOssService.deleteWithValidByIds(Arrays.asList(ossIds), true));
+        return toAjax(iSysOssService.deleteWithValidByIds(List.of(ossIds), true));
     }
 
 }
